[Refactor] Change Method used in a unittest